--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,13 @@
   <ul class="nav-menu">
       <li class="nav-item"><a href="{{ site.baseurl }}/" class="nav-link">Home</a></li>
       <li class="nav-item"><a href="#news" class="nav-link">News</a></li>
+      {% if site.one_page %}
+      <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+      <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+      {% else %}
       <li class="nav-item"><a href="{{ site.baseurl }}/education/" class="nav-link">Education</a></li>
       <li class="nav-item"><a href="{{ site.baseurl }}/experience/" class="nav-link">Experience</a></li>
+      {% endif %}
       <li class="nav-item"><a href="#publications" class="nav-link">Publications</a></li>
       <li class="nav-item"><a href="{{ site.baseurl }}/projects/" class="nav-link">Projects</a></li>
       <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
@@ -172,14 +177,15 @@
 </div>
 <hr class="soft">
   
+{% if site.one_page %}
 <!-- Experience -->
-
-
-
+{% include experience_section.html %}
+<hr class="soft">
 
 <!-- Education -->
-
-
+{% include education_section.html %}
+<hr class="soft">
+{% endif %}
         
 <!-- Publications -->
 <button type="button" class="collapsible section-toggle" data-toggle="collapse" data-target="#content-publications" id="publications">
