single_page multipl switch

--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -65,21 +65,21 @@
   </div>
 
 
-<!-- Projects Section -->
+<!-- Contact -->
+{% include contact_section.html %}
+<hr class="soft">
 
 
-
-
-{% include projects_section.html %}
-
-  <hr class="soft">
-
-
-        <!-- Projects Section -->
-
-
-    
-
+        <table class="footer-table">
+            <tr>
+              <td style="padding:0px">
+                <br>
+                <p style="text-align:center;font-size:small;">
+                  Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
+                </p>
+              </td>
+            </tr>
+          </table>
           
         </td>
       </tr>
@@ -89,5 +89,3 @@
   
   
   </html>
-  
-  
