--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -36,11 +36,31 @@
     <ul class="nav-menu">
         <li class="nav-item"><a href="{{ site.baseurl }}/" class="nav-link">Home</a></li>
         <li class="nav-item"><a href="{{ site.baseurl }}/#news" class="nav-link">News</a></li>
+        {% if site.one_page_education %}
+        <li class="nav-item"><a href="{{ site.baseurl }}/#education" class="nav-link">Education</a></li>
+        {% else %}
         <li class="nav-item"><a href="{{ site.baseurl }}/education/" class="nav-link">Education</a></li>
+        {% endif %}
+        {% if site.one_page_experience %}
+        <li class="nav-item"><a href="{{ site.baseurl }}/#experience" class="nav-link">Experience</a></li>
+        {% else %}
         <li class="nav-item"><a href="{{ site.baseurl }}/experience/" class="nav-link">Experience</a></li>
+        {% endif %}
+        {% if site.one_page_publications %}
         <li class="nav-item"><a href="{{ site.baseurl }}/#publications" class="nav-link">Publications</a></li>
+        {% else %}
+        <li class="nav-item"><a href="{{ site.baseurl }}/publications/" class="nav-link">Publications</a></li>
+        {% endif %}
+        {% if site.one_page_projects %}
+        <li class="nav-item"><a href="{{ site.baseurl }}/#projects" class="nav-link">Projects</a></li>
+        {% else %}
         <li class="nav-item"><a href="{{ site.baseurl }}/projects/" class="nav-link">Projects</a></li>
+        {% endif %}
+        {% if site.one_page_contact %}
         <li class="nav-item"><a href="{{ site.baseurl }}/#contact" class="nav-link">Contact</a></li>
+        {% else %}
+        <li class="nav-item"><a href="{{ site.baseurl }}/contact/" class="nav-link">Contact</a></li>
+        {% endif %}
     </ul>
   </div>
 
@@ -49,59 +69,7 @@
 
 
 <!-- Publications -->
-<button type="button" class="collapsible section-toggle" data-toggle="collapse" data-target="#content-publications" id="publications">
-  <h2>Publications</h2>
-  </button>
-<div id="content-publication" class="collapse in">
-
-        <table class="section-table">
-          {% for post in site.posts %}
-          {% for cat in post.categories %}
-          {% if cat == 'research' %}
-          <tr>
-            <td class="entry-media-cell">
-              <a href="{{post.image}}"><img src="{{post.image}}" alt="project image" class="card-image" /></a>
-            </td>
-            <td class="entry-text-cell">
-              <h3>{{post.title}}</h3>
-              <br>
-              {{post.authors}}
-
-              <br>
-              <em>{{post.subtitle}} - {{post.venue}}</em>, {{ post.date | date: "%Y" }}
-              <br>
-              {% if post.paper %}
-              <a href="{{post.paper}}">paper</a> /
-              {% endif %}
-              {% if post.web %}
-              <a href="{{post.web}}">web</a> /
-              {% endif %}
-              {% if post.video %}
-              <a href="{{post.video}}">video</a> /
-              {% endif %}
-              {% if post.code %}
-              <a href="{{post.code}}">code</a> /
-              {% endif %}
-              {% if post.poster %}
-              <a href="{{post.poster}}">poster</a> /
-              {% endif %}
-              {% if post.slides %}
-              <a href="{{post.slides}}">slides</a> /
-              {% endif %}
-              <p></p>
-              {{ post.excerpt }}
-            </td>
-          </tr>
-          {% endif %}
-          {% endfor %}
-          {% endfor %}
-        </table>
-        <br>
-        
-        <br>
-        <br>
-        
-</div>
+{% include publications_section.html show_year=true %}
 <hr class="soft">
 
 
