page switch test

--- a/_includes/experience_section.html
+++ b/_includes/experience_section.html
@@ -65,7 +65,7 @@
         04.2023 - 05.2024 | Munich, Germany
         <br>
         <p align="justify" class="entry-summary">Robotics Research (Internship + MSc Thesis) @ Huawei Munich Research Center. <br>
-          Open World 3D Scene Understanding utilizing foundation models and LLM (IEEE ICRA'25). <br>
+          Open World 3D Scene Understanding utilizing foundation models and LLM <span style="color: red;">(IEEE ICRA'25)</span>. <br>
           LiDAR SLAM (Life-Long Localization & Mapping).</p>
       </td>
     </tr>
