Fix typos in experience_section.html

--- a/_includes/experience_section.html
+++ b/_includes/experience_section.html
@@ -16,7 +16,7 @@
         <br>
         <p align="justify" class="entry-summary" style="margin-bottom:0;">
           PhD Candidate and Researcher Assistant @ Uni-Bonn & Lamarr Institute.<br>
-          Area of Research - Spatial/Physical AI, Robotics Learing, Open World Understanding.
+          Area of Research - Spatial/Physical AI, Robotics Learning, Open World Understanding.
         </p>
       </td>
     </tr>
@@ -32,7 +32,7 @@
         <br>
         09.2025 - 12.2025 | Stuttgart, Germany
         <br>
-        <p align="justify" class="entry-summary">Research Engineer @ Sereact. <br>
+        <p align="justify" class="entry-summary">Robotics Engineer @ Sereact. <br>
           Developed foundation models for 9 DoF 3D bounding box estimation.</p>
       </td>
     </tr>
