--- a/_includes/experience_section.html
+++ b/_includes/experience_section.html
@@ -28,7 +28,7 @@
         </div>
       </td>
       <td class="entry-content-cell">
-        <papertitle><big><b>Research Engineer, Sereact</b></big></papertitle>
+        <papertitle><big><b>Robotics Engineer, Sereact</b></big></papertitle>
         <br>
         09.2025 - 12.2025 | Stuttgart, Germany
         <br>
