Update profile image and correct project description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
               </p>
               
               <p align="justify">
-                Before this, I have worked across academia and industry in diverse research and engineering roles, contributing to a range of related to robotics, 3D vision, and simulation.
+                Before this, I have worked across academia and industry in diverse research and engineering roles, contributing to a range of projects related to robotics, 3D vision, and simulation.
                 I completed my M.Sc. from  
                 <a href="https://www.ed.tum.de/ed/startseite/" target="_blank" rel="noopener noreferrer">
                   Technical University of Munich (TUM)
@@ -132,8 +132,8 @@
             </td>
             <td class="intro-photo-cell">
                 <div class="intro-photo-wrap">  <!-- fine-tune this value -->
-                  <a href="images/main/dp24.jpeg">
-                    <img src="images/main/dp24.jpeg" class="profile-image hoverZoomLink" alt="profile photo"/>
+                  <a href="images/main/dp25.png">
+                    <img src="images/main/dp25.png" class="profile-image hoverZoomLink" alt="profile photo"/>
                   </a>              
                 </div>
               </td>
